--- a/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
+++ b/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
@@ -15,6 +15,35 @@
     "type: tangibles\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Week 1 summary of code and problems faced\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Monday\n",
+    "On Monday, me and my partner Sathvik began the day by installing the nessasary tools fo the course. A few of the tools included, docker, anaconda, vscode, slack etc. At one step, namely ***make*** both of use could not progress further as we faced the same error ***error1***. This little error stopped us from moving further. We tried a lot of things but none of it seemed to work the make command. Finally chatgpt helped out solving the problem with the two commands."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*bundle install and bundle update*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n"
+   ]
   }
  ],
  "metadata": {
