--- a/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
+++ b/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
@@ -42,7 +42,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n"
+    "<br>\n",
+    "\n",
+    "#### Tuesday\n",
+    "Although the bundle update code worked to fix the make error for me the same did not work for Sathvik's error. Thus we kept working around the code as our presentation was the next day. We tried many new things but the make code still did not seem to work on Sathvik's computer. After a while Saathvik seemed to solve the code on his his by closing and reopening the vscode terminal which seemed to fix the make error once and for all. We then worked on our speeches for our first tool check which was scheduled for the next day.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "#### Wednesday\n",
+    "Today was the day of our tool check. We were the first to be called on as the previous group did no seem to answer their call. We then explained all the we did, our main make error and how we seem to have fixed the error and also show the changes we made to our home change inlcuding the addition of the our freeform introductory picture. We then finished our presentation with a total score of 1.8 and 1.85 each. Overall i felt it was a pretty well done presentation. I then changed my theme to hacker for the theme change point. Before class ended I seem to have got the make error back, I tried the same bundle update but it didnt seem to work. Fianlly this code which one of my classmate had sent in worked to fix my make error.\n",
+    "\n",
+    "***ln -s /opt/homebrew/share/jupyter/nbconvert ~/Library/Jupyter***\n",
+    "\n",
+    "#### Thursday\n",
+    "On Thurday since the tool check was still going on for our peers we continued to customize our home page and also worked on helping oour peers with the samll problems they faced here and there including a few make error here and there. Overall this was a pretty small day as there was not a lot of coding involved.\n",
+    "\n",
+    "#### Friday\n",
+    "On Friday we started really coding into new blogs and also use new code such as python and Java. The two new project that me and my partner worked on were, the Javascript calculator and the python input output quiz which was mainly about about the new commands that I leanrnt in the markdown code. The list of the code i learnt and used throughout the week are listed below.\n"
    ]
   }
  ],
