--- a/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
+++ b/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
@@ -12,7 +12,7 @@
     "description: This is the summary for week on of CSP classes. (21-25 August)\n",
     "courses: { csp: {week: 1, categories: [1.A, 3.A, 4.B]} }\n",
     "categories: [C4.0]\n",
-    "type: tangibles\n",
+    "type: plans\n",
     "---"
    ]
   },
@@ -58,7 +58,67 @@
     "On Thurday since the tool check was still going on for our peers we continued to customize our home page and also worked on helping oour peers with the samll problems they faced here and there including a few make error here and there. Overall this was a pretty small day as there was not a lot of coding involved.\n",
     "\n",
     "#### Friday\n",
-    "On Friday we started really coding into new blogs and also use new code such as python and Java. The two new project that me and my partner worked on were, the Javascript calculator and the python input output quiz which was mainly about about the new commands that I leanrnt in the markdown code. The list of the code i learnt and used throughout the week are listed below.\n"
+    "On Friday we started really coding into new blogs and also use new code such as python and Java. The two new project that me and my partner worked on were, the Javascript calculator and the python input output quiz which was mainly about about the new commands that I leanrnt in the markdown code. The list of the code i learnt and used throughout the week are listed below.\n",
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Key Vocabulary Learnt\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th>Commands</th>\n",
+    "    <th>Definition</th>\n",
+    "    <th>Week </th>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>make</td>\n",
+    "    <td>This runs local severer</td>\n",
+    "    <td> Week 0</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>print ()</td>\n",
+    "    <td>In Python code the print code literally prints the message onto the site, similar to the <p> used in HTML</td>\n",
+    "    <td> Week 1</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>cd</td>\n",
+    "    <td>Changes directories within a folder</td>\n",
+    "    <td> Week 0</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>ls</td>\n",
+    "    <td>Checks all the directories in a folder.</td>\n",
+    "    <td> Week 0</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>--version</td>\n",
+    "    <td>Checks for the version of each of the application installed. It really helped out during the installation process.</td>\n",
+    "    <td> Week 1</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>**xyz** <link></td>\n",
+    "    <td>Changes the boldness of the text as well as the italics part of the text.</td>\n",
+    "    <td>Week 1</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>Command S </td>\n",
+    "    <td>Saves the code into the local server</td>\n",
+    "    <td> Week 1</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>Commit on VScode</td>\n",
+    "    <td>Commits the code into the github terminal and the site</td>\n",
+    "    <td>Week 1</td>\n",
+    "  </tr>\n",
+    "<tr>\n",
+    "    <td>###</td>\n",
+    "    <td>Highlights the peice of text as a heading. The larger it gets the smaller the heading.</td>\n",
+    "    <td>Week 1</td>\n",
+    " </tr>"
    ]
   }
  ],
