--- a/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
+++ b/_notebooks/2023-08-28-Week_1_Summary_copy.ipynb
@@ -118,7 +118,8 @@
     "    <td>###</td>\n",
     "    <td>Highlights the peice of text as a heading. The larger it gets the smaller the heading.</td>\n",
     "    <td>Week 1</td>\n",
-    " </tr>"
+    " </tr>\n",
+    " </table>"
    ]
   }
  ],
