--- a/_notebooks/2023-08-28-Weeks_2_plans.ipynb
+++ b/_notebooks/2023-08-28-Weeks_2_plans.ipynb
@@ -8,12 +8,29 @@
     "---\n",
     "# this is YAML front matter\n",
     "layout: post\n",
-    "title: Python IO Input/Output Quiz\n",
-    "description: THis small quiz uses python to ask and keep points for the player and tests them on the basic fucntions of python.\n",
+    "title: Week 2 Plans\n",
+    "description: This post details the plans for week 2\n",
     "courses: { csp: {week: 2, categories: [1.A, 3.A, 4.B]} }\n",
     "categories: [C4.0]\n",
     "type: plans\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Monday\n",
+    "- Start with listening to the tech talk.\n",
+    "- Begin making two new posts, one for Week 1 sumary and the other for week 2 plans\n",
+    "- Check salck for new messages and begin organising you notebook\n",
+    "- Finish week 1 summary and also include basic code you learnt last week and week 0 into an organized table\n",
+    "- Work on Week 2 plans if time permits\n",
+    "- Make your github.io site work and commit all the changes from VSCode into the site.\n",
+    "\n",
+    "#### Tuesday\n",
+    "- Begin by completing the week 2 plans and include major stuff you learnt as hack and tangibles\n",
+    "- "
    ]
   }
  ],
