--- a/_notebooks/2023-08-28-Weeks_2_plans.ipynb
+++ b/_notebooks/2023-08-28-Weeks_2_plans.ipynb
@@ -30,8 +30,25 @@
     "\n",
     "#### Tuesday\n",
     "- Begin by completing the week 2 plans and include major stuff you learnt as hack and tangibles\n",
-    "- "
+    "- Work on revising the IPYNB files and add in the required hacks and tangibles\n",
+    "- Learn how to do ***code fencing*** and ***code cells***\n",
+    "- Finish day by revising IPYNB files and python IO IPYNB\n",
+    "- Sign up for Wednesday's lab notebook check\n",
+    "\n",
+    "#### Wednesday\n",
+    "- Try output levels into Jupyter Notebook for easier presentation rather than VSCode, stuff to learn\n",
+    "- Revise your speeach for today's presentation\n",
+    "- Present the notebook and all that you have learnt to Mort\n",
+    "- Customize homepage to only include main stuff and shift all other detials into another table or another page itself.\n",
+    "\n",
+    "#### Thursday\n",
+    "#### Friday\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
