--- a/_notebooks/2023-08-28-Weeks_2_plans.ipynb
+++ b/_notebooks/2023-08-28-Weeks_2_plans.ipynb
@@ -48,7 +48,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Add your learnings for this week into this table below\n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<th>Week</th>\n",
+    "<th>Command</th>\n",
+    "<th>Defenition</th>\n",
+    "</tr>\n"
+   ]
   }
  ],
  "metadata": {
