--- a/_notebooks/2023-08-28-Weeks_2_plans.ipynb
+++ b/_notebooks/2023-08-28-Weeks_2_plans.ipynb
@@ -42,6 +42,12 @@
     "- Customize homepage to only include main stuff and shift all other detials into another table or another page itself.\n",
     "\n",
     "#### Thursday\n",
+    "- Work on any pending works\n",
+    "- Begin working on the Week 2 summary and add it into the table of contents\n",
+    "- Revise previous blogs, see if you have missed out on anything\n",
+    "- Help out if anything is needed\n",
+    "- Work on making the blog better\n",
+    "\n",
     "#### Friday\n"
    ]
   },
@@ -49,6 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "#### Add your learnings for this week into this table below\n",
     "\n",
     "<table>\n",
